# iMHEA_python

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: CODE_REVIEW.md  DATA_FORMAT.md  VALIDATION.md
docs/manuals/: iMHEA_Installation_Manual_EN.docx  iMHEA_Manual_de_Instalacion_ES.docx  iMHEA_Manual_de_Usuario_ES.docx  iMHEA_User_Manual_EN.docx  install_en.md  install_es.md  user_en.md  user_es.md
docs/review/: A_preprocessing.md  B_processing_io.md  C_flow_analysis.md  D_indices.md  E_workflows_plots.md  F_paper.md
gui/: README.md  run_gui.py
gui/imhea_gui/: app.py  dialogs.py  i18n.py  project.py  runner.py  tabs.py
packaging/: README.md  build_mac.command  build_windows.bat  imhea_gui.spec
src/imhea/: __init__.py  aggregate.py  clean.py  cli.py  flow.py  indices.py  io.py  mtime.py  plots.py  registry.py  stats.py  workflow.py
tests/: test_analysis.py  test_cli.py  test_core.py  test_gui.py  test_plots.py  test_real_data.py  test_workflow.py
validation/: index_metrics.csv  run_network.py  series_metrics.csv
